syntax = "proto2";

package hourai.db.proto;

message MessageComponentProto {
  oneof component {
    VerificationButton verification_button = 1;
    MusicButton music_button = 2;
  }
}

// NEXT ID: 4
enum VerificationButtonOption {
  VERIFICATION_BUTTON_UNSPECIFIED = 0;
  VERIFICATION_BUTTON_VERIFY = 1;
  VERIFICATION_BUTTON_KICK = 2;
  VERIFICATION_BUTTON_BAN = 3;
}

// NEXT ID: 3
message VerificationButton {
  optional /* actually required */ VerificationButtonOption button_option = 1;
  optional /* actually required */ fixed64 user_id = 2;
}

// NEXT ID: 8
enum MusicButtonOption {
  MUSIC_BUTTON_UNSPECIFIED = 0;
  MUSIC_BUTTON_PLAY_PAUSE = 1;
  MUSIC_BUTTON_STOP = 2;
  MUSIC_BUTTON_NEXT_TRACK = 3;
  MUSIC_BUTTON_QUEUE_NEXT_PAGE = 4;
  MUSIC_BUTTON_QUEUE_PREV_PAGE = 5;
  MUSIC_BUTTON_VOLUME_UP = 6;
  MUSIC_BUTTON_VOLUME_DOWN = 7;
}

// NEXT ID: 3
enum MusicUIType {
  MUSIC_UI_TYPE_UNSPECIFIED = 0;
  MUSIC_UI_TYPE_NOW_PLAYING = 1;
  MUSIC_UI_TYPE_QUEUE = 2;
}

// NEXT ID: 3
message MusicButton {
  optional /* actually required */ MusicUIType type = 1;
  optional /* actually required */ MusicButtonOption button_option = 2;
}
